--- a/sida 2.css
+++ b/sida 2.css
@@ -14,6 +14,14 @@
 }
 body{
     margin: 0;
+    background-color :var(--bg);
+    color: var(--text);
+}
+.theme-dark, .theme-light *{
+    color: #ffffff !important;
+}
+.theme-light, .theme-dark *{
+    color: #000000 !important;
 }
 header{
     grid-area: header;
@@ -23,16 +31,23 @@ header{
 }
 header li{
     list-style-type: none;
-   
+   padding: 7px;
+   float: left;
+   margin-top: 20px;
+}
+header h2{
+    float: left;
+    margin-left: 55px;
 }
 
 header a{ 
     text-decoration: none;
-    
+  
 }
 main{
     grid-area: main;
     background-color: #FFD700;
+    
 }
 aside{
  grid-area: aside;
@@ -45,7 +60,15 @@ footer{
     background-color: #db1010;
     background: #0000FF;
     background: linear-gradient(0deg, rgba(0, 0, 255, 1) 0%, rgba(255, 255, 0, 1) 100%);
+    text-align: center;
+    
 }
+footer img{
+    height: 30px;
+    float: left;
+   
+}
+
 #info{
     display: none;
 }
@@ -89,4 +112,11 @@ h2{
     height: 32px;
     width: 32px;
     display: block;
+}
+main img{
+    height: 80px;
+    
+}
+#kontakta{
+    margin-right: 45px;
 }
