--- a/index.css
+++ b/index.css
@@ -18,10 +18,10 @@ body{
     color: var(--text);
 }
 .theme-dark, .theme-light *{
-    color: #ffffff !important;
+    color: #000000 !important;
 }
 .theme-light, .theme-dark *{
-    color: #000000 !important;
+    color: #ec2bd3 !important;
 }
 header{
     grid-area: header;
@@ -47,7 +47,7 @@ header a{
 main{
     grid-area: main;
     background-color: #FFD700;
-    
+    padding: 5px;
 }
 aside{
  grid-area: aside;
@@ -122,32 +122,30 @@ main img{
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
   }
   
-  /* Modal Content/Box */
+  
   .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%; 
   }
   .modal-content img{
       width: 100%;
      height: 100%;
   }
   
-  /* The Close Button */
+  
   .close {
     color: #aaa;
     float: right;
@@ -160,4 +158,11 @@ main img{
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+  #Jimmy{
+    height: 20px;
+    width: 20px;
+  }
+  #sverige-lag{
+    height: 90px;
   }
