--- a/sida 2.css
+++ b/sida 2.css
@@ -18,10 +18,10 @@ body{
     color: var(--text);
 }
 .theme-dark, .theme-light *{
-    color: #ffffff !important;
+    color: #000000 !important;
 }
 .theme-light, .theme-dark *{
-    color: #000000 !important;
+    color: #ec2bd3 !important;
 }
 header{
     grid-area: header;
@@ -47,7 +47,7 @@ header a{
 main{
     grid-area: main;
     background-color: #FFD700;
-    
+    padding: 5px;
 }
 aside{
  grid-area: aside;
@@ -119,4 +119,73 @@ main img{
 }
 #kontakta{
     margin-right: 45px;
+}
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  
+  .modal-content {
+    margin: 15% auto; 
+    padding: 20px;
+    width: 80%; 
+  }
+  .modal-content img{
+      width: 100%;
+     height: 100%;
+  }
+  
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #Jimmy{
+    height: 20px;
+    width: 20px;
+  }
+  #sverige-lag{
+    height: 90px;
+  }
+  
+.Shop-container{
+    display: grid;
+    grid-template-columns: auto auto ;
+    gap: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.Shop-container img{
+    margin-top: 20px;
+    width: 50%;
+    height: 100px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.Shop-container div{
+    background-color: white;
+    border-radius: 5px;
+}
+.text{
+    text-align: center;
+    color: black;
 }
