--- a/sida 4.css
+++ b/sida 4.css
@@ -1,201 +1,15 @@
 
-.grid-container{
-    min-height: 100vh;
-    display: grid;
-
-    grid-template-columns: 1fr 1fr 1fr  ;
-    grid-template-rows:  0.4fr 3fr 1fr 0.5fr ;
-
-    grid-template-areas: 
-    "header header header "
-    "main main main"
-    " aside aside aside"
-    "footer footer footer";
-}
-body{
-    margin: 0;
-    background-color :var(--bg);
-    color: var(--text);
-}
-.theme-dark, .theme-light *{
-    color: #000000 !important;
-}
-.theme-light, .theme-dark *{
-    color: #ec2bd3 !important;
-}
-header{
-    grid-area: header;
-    background-image: url(sweden-flag\ \(1\).jpg);
-    background-size: 100% 100%;
-    
-}
-header li{
-    list-style-type: none;
-   padding: 7px;
-   float: left;
-   margin-top: 20px;
-}
-header h2{
-    float: left;
-    margin-left: 55px;
-}
-
-header a{ 
-    text-decoration: none;
-  
-}
 main{
     grid-area: main;
     background-color: #FFD700;
     padding: 5px;
     
 }
-aside{
- grid-area: aside;
- background-color: #FFD700;
- background-size: 100% 100%;
- background-image: url(jimmie_aakesson_2018_1000x562.jpg);
-}
-footer{
-    grid-area: footer;
-    background-color: #db1010;
-    background: #0000FF;
-    background: linear-gradient(0deg, rgba(0, 0, 255, 1) 0%, rgba(255, 255, 0, 1) 100%);
-    text-align: center;
-    
-}
-footer img{
-    height: 30px;
-    float: left;
-   
-}
-
-#info{
-    display: none;
-}
-.menu{
-    color: aliceblue;
-    font-size: 50px;
-    display: flex;
-    align-items: center;
-}
-#info{
-    color: aliceblue;
-    font-size: larger;
-}
-.dark-mode{
-    margin-left: 308px;
-}
-a{
-    color: aliceblue;
-}
-h2{
-    padding: 5px;
-    margin: 0;
-    text-align: center;
-    color: #ffffff;
-    margin-top: 40px;
-}
-
-.menu i {
-    font-size: 40px;
-    line-height: 1;
-}
-
-.menu button {
-    background: none;
-    border: none;
-    padding: 0;
-    display: flex;
-}
-
-.menu button img {
-    height: 32px;
-    width: 32px;
-    display: block;
-}
-main img{
-    height: 80px;
-    
-}
-#kontakta{
-    margin-right: 45px;
-}
-
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4);
-  }
-  
-  
-  .modal-content {
-    margin: 15% auto; 
-    padding: 20px;
-    width: 80%; 
-  }
-  .modal-content img{
-      width: 100%;
-     height: 100%;
-  }
-  
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  #Jimmy{
-    height: 20px;
-    width: 20px;
-  }
-  #sverige-lag{
-    height: 90px;
-  }
-  
-.Shop-container{
-    display: grid;
-    grid-template-columns: auto auto ;
-    gap: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-.Shop-container img{
-    margin-top: 20px;
-    width: 50%;
-    height: 100px;
-    border-radius: 10px;
-    object-fit: cover;
-}
-.Shop-container div{
-    background-color: white;
-    border-radius: 5px;
-}
-.text{
-    text-align: center;
-    color: black;
-}
-
-
 .game{
     height: 200px;
     width: 375px;
     border: black solid 2px;
+    background-color: #1ad8f1;
 }
 #spelare{
     height: 50px;
